Lex_Yacc/y.output
Terminaux inutilisés dans la grammaire

   tCo
   tCf
   tReturn
   tEqLog
   tInclude
   tConst
   tMain
   tFloat


Grammaire

    0 $accept: Start $end

    1 Start: Fonction Start
    2      | %empty

    3 Fonction: tInt tId tPo Args tPf Body

    4 Args: %empty
    5     | Arg ListeArgs

    6 ListeArgs: tVir Arg ListeArgs
    7          | %empty

    8 Arg: tInt tId

    9 $@1: %empty

   10 Body: tAo $@1 Instrus tAf

   11 Instrus: %empty
   12        | Instru Instrus

   13 Instru: Declaration
   14       | BoucleIf
   15       | While
   16       | Affectation
   17       | Invocation

   18 Invocation: tId tPo Params tPf tPvir

   19 Param: ExpArithm

   20 Params: %empty
   21       | Param
   22       | Param tVir ParamsNext

   23 ParamsNext: Param
   24           | Param tVir ParamsNext

   25 BoucleIf: If Else

   26 $@2: %empty

   27 If: tIf tPo ExpArithm tPf $@2 Body

   28 Else: %empty
   29     | tElse Body

   30 $@3: %empty

   31 While: tWhile tPo ExpArithm tPf $@3 Body

   32 ExpArithm: ExpArithm tPlus ExpArithm
   33          | ExpArithm tMoins ExpArithm
   34          | ExpArithm tStar ExpArithm
   35          | ExpArithm tDiv ExpArithm
   36          | ExpArithm tOr ExpArithm
   37          | ExpArithm tAnd ExpArithm
   38          | ExpArithm tEq tEq ExpArithm
   39          | ExpArithm tInf ExpArithm
   40          | ExpArithm tSup ExpArithm
   41          | ExpArithm tInf tEq ExpArithm
   42          | ExpArithm tSup tEq ExpArithm
   43          | tNot ExpArithm
   44          | tPo ExpArithm tPf
   45          | tNb
   46          | tId
   47          | Invocation

   48 Affectation: tId tEq ExpArithm tPvir

   49 Declaration: tInt Decls tPvir

   50 Decl1: tId
   51      | tId tEq ExpArithm

   52 Decls: Decl1
   53      | Decl1 tVir Decls


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tAo (258) 10
tAf (259) 10
tPo (260) 3 18 27 31 44
tPf (261) 3 18 27 31 44
tCo (262)
tCf (263)
tId (264) 3 8 18 46 48 50 51
tNb (265) 45
tIf (266) 27
tInt (267) 3 8 49
tPvir (268) 18 48 49
tElse (269) 29
tVir (270) 6 22 24 53
tWhile (271) 31
tReturn (272)
tEqLog (273)
tInclude (274)
tConst (275)
tMain (276)
tFloat (277)
tEq (278) 38 41 42 48 51
tInf (279) 39 41
tSup (280) 40 42
tPlus (281) 32
tMoins (282) 33
tStar (283) 34
tDiv (284) 35
tOr (285) 36
tAnd (286) 37
tNot (287) 43


Non-terminaux, suivis des règles où ils apparaissent

$accept (33)
    à gauche: 0
Start (34)
    à gauche: 1 2, à droite: 0 1
Fonction (35)
    à gauche: 3, à droite: 1
Args (36)
    à gauche: 4 5, à droite: 3
ListeArgs (37)
    à gauche: 6 7, à droite: 5 6
Arg (38)
    à gauche: 8, à droite: 5 6
Body (39)
    à gauche: 10, à droite: 3 27 29 31
$@1 (40)
    à gauche: 9, à droite: 10
Instrus (41)
    à gauche: 11 12, à droite: 10 12
Instru (42)
    à gauche: 13 14 15 16 17, à droite: 12
Invocation (43)
    à gauche: 18, à droite: 17 47
Param (44)
    à gauche: 19, à droite: 21 22 23 24
Params (45)
    à gauche: 20 21 22, à droite: 18
ParamsNext (46)
    à gauche: 23 24, à droite: 22 24
BoucleIf (47)
    à gauche: 25, à droite: 14
If (48)
    à gauche: 27, à droite: 25
$@2 (49)
    à gauche: 26, à droite: 27
Else (50)
    à gauche: 28 29, à droite: 25
While (51)
    à gauche: 31, à droite: 15
$@3 (52)
    à gauche: 30, à droite: 31
ExpArithm (53)
    à gauche: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47, à droite:
    19 27 31 32 33 34 35 36 37 38 39 40 41 42 43 44 48 51
Affectation (54)
    à gauche: 48, à droite: 16
Declaration (55)
    à gauche: 49, à droite: 13
Decl1 (56)
    à gauche: 50 51, à droite: 52 53
Decls (57)
    à gauche: 52 53, à droite: 49 53


État 0

    0 $accept: . Start $end

    tInt  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (Start)

    Start     aller à l'état 2
    Fonction  aller à l'état 3


État 1

    3 Fonction: tInt . tId tPo Args tPf Body

    tId  décalage et aller à l'état 4


État 2

    0 $accept: Start . $end

    $end  décalage et aller à l'état 5


État 3

    1 Start: Fonction . Start

    tInt  décalage et aller à l'état 1

    $défaut  réduction par utilisation de la règle 2 (Start)

    Start     aller à l'état 6
    Fonction  aller à l'état 3


État 4

    3 Fonction: tInt tId . tPo Args tPf Body

    tPo  décalage et aller à l'état 7


État 5

    0 $accept: Start $end .

    $défaut  accepter


État 6

    1 Start: Fonction Start .

    $défaut  réduction par utilisation de la règle 1 (Start)


État 7

    3 Fonction: tInt tId tPo . Args tPf Body

    tInt  décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 4 (Args)

    Args  aller à l'état 9
    Arg   aller à l'état 10


État 8

    8 Arg: tInt . tId

    tId  décalage et aller à l'état 11


État 9

    3 Fonction: tInt tId tPo Args . tPf Body

    tPf  décalage et aller à l'état 12


État 10

    5 Args: Arg . ListeArgs

    tVir  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 7 (ListeArgs)

    ListeArgs  aller à l'état 14


État 11

    8 Arg: tInt tId .

    $défaut  réduction par utilisation de la règle 8 (Arg)


État 12

    3 Fonction: tInt tId tPo Args tPf . Body

    tAo  décalage et aller à l'état 15

    Body  aller à l'état 16


État 13

    6 ListeArgs: tVir . Arg ListeArgs

    tInt  décalage et aller à l'état 8

    Arg  aller à l'état 17


État 14

    5 Args: Arg ListeArgs .

    $défaut  réduction par utilisation de la règle 5 (Args)


État 15

   10 Body: tAo . $@1 Instrus tAf

    $défaut  réduction par utilisation de la règle 9 ($@1)

    $@1  aller à l'état 18


État 16

    3 Fonction: tInt tId tPo Args tPf Body .

    $défaut  réduction par utilisation de la règle 3 (Fonction)


État 17

    6 ListeArgs: tVir Arg . ListeArgs

    tVir  décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 7 (ListeArgs)

    ListeArgs  aller à l'état 19


État 18

   10 Body: tAo $@1 . Instrus tAf

    tId     décalage et aller à l'état 20
    tIf     décalage et aller à l'état 21
    tInt    décalage et aller à l'état 22
    tWhile  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 11 (Instrus)

    Instrus      aller à l'état 24
    Instru       aller à l'état 25
    Invocation   aller à l'état 26
    BoucleIf     aller à l'état 27
    If           aller à l'état 28
    While        aller à l'état 29
    Affectation  aller à l'état 30
    Declaration  aller à l'état 31


État 19

    6 ListeArgs: tVir Arg ListeArgs .

    $défaut  réduction par utilisation de la règle 6 (ListeArgs)


État 20

   18 Invocation: tId . tPo Params tPf tPvir
   48 Affectation: tId . tEq ExpArithm tPvir

    tPo  décalage et aller à l'état 32
    tEq  décalage et aller à l'état 33


État 21

   27 If: tIf . tPo ExpArithm tPf $@2 Body

    tPo  décalage et aller à l'état 34


État 22

   49 Declaration: tInt . Decls tPvir

    tId  décalage et aller à l'état 35

    Decl1  aller à l'état 36
    Decls  aller à l'état 37


État 23

   31 While: tWhile . tPo ExpArithm tPf $@3 Body

    tPo  décalage et aller à l'état 38


État 24

   10 Body: tAo $@1 Instrus . tAf

    tAf  décalage et aller à l'état 39


État 25

   12 Instrus: Instru . Instrus

    tId     décalage et aller à l'état 20
    tIf     décalage et aller à l'état 21
    tInt    décalage et aller à l'état 22
    tWhile  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 11 (Instrus)

    Instrus      aller à l'état 40
    Instru       aller à l'état 25
    Invocation   aller à l'état 26
    BoucleIf     aller à l'état 27
    If           aller à l'état 28
    While        aller à l'état 29
    Affectation  aller à l'état 30
    Declaration  aller à l'état 31


État 26

   17 Instru: Invocation .

    $défaut  réduction par utilisation de la règle 17 (Instru)


État 27

   14 Instru: BoucleIf .

    $défaut  réduction par utilisation de la règle 14 (Instru)


État 28

   25 BoucleIf: If . Else

    tElse  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 28 (Else)

    Else  aller à l'état 42


État 29

   15 Instru: While .

    $défaut  réduction par utilisation de la règle 15 (Instru)


État 30

   16 Instru: Affectation .

    $défaut  réduction par utilisation de la règle 16 (Instru)


État 31

   13 Instru: Declaration .

    $défaut  réduction par utilisation de la règle 13 (Instru)


État 32

   18 Invocation: tId tPo . Params tPf tPvir

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 20 (Params)

    Invocation  aller à l'état 47
    Param       aller à l'état 48
    Params      aller à l'état 49
    ExpArithm   aller à l'état 50


État 33

   48 Affectation: tId tEq . ExpArithm tPvir

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 51


État 34

   27 If: tIf tPo . ExpArithm tPf $@2 Body

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 52


État 35

   50 Decl1: tId .
   51      | tId . tEq ExpArithm

    tEq  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 50 (Decl1)


État 36

   52 Decls: Decl1 .
   53      | Decl1 . tVir Decls

    tVir  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 52 (Decls)


État 37

   49 Declaration: tInt Decls . tPvir

    tPvir  décalage et aller à l'état 55


État 38

   31 While: tWhile tPo . ExpArithm tPf $@3 Body

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 56


État 39

   10 Body: tAo $@1 Instrus tAf .

    $défaut  réduction par utilisation de la règle 10 (Body)


État 40

   12 Instrus: Instru Instrus .

    $défaut  réduction par utilisation de la règle 12 (Instrus)


État 41

   29 Else: tElse . Body

    tAo  décalage et aller à l'état 15

    Body  aller à l'état 57


État 42

   25 BoucleIf: If Else .

    $défaut  réduction par utilisation de la règle 25 (BoucleIf)


État 43

   44 ExpArithm: tPo . ExpArithm tPf

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 58


État 44

   18 Invocation: tId . tPo Params tPf tPvir
   46 ExpArithm: tId .

    tPo  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 46 (ExpArithm)


État 45

   45 ExpArithm: tNb .

    $défaut  réduction par utilisation de la règle 45 (ExpArithm)


État 46

   43 ExpArithm: tNot . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 59


État 47

   47 ExpArithm: Invocation .

    $défaut  réduction par utilisation de la règle 47 (ExpArithm)


État 48

   21 Params: Param .
   22       | Param . tVir ParamsNext

    tVir  décalage et aller à l'état 60

    $défaut  réduction par utilisation de la règle 21 (Params)


État 49

   18 Invocation: tId tPo Params . tPf tPvir

    tPf  décalage et aller à l'état 61


État 50

   19 Param: ExpArithm .
   32 ExpArithm: ExpArithm . tPlus ExpArithm
   33          | ExpArithm . tMoins ExpArithm
   34          | ExpArithm . tStar ExpArithm
   35          | ExpArithm . tDiv ExpArithm
   36          | ExpArithm . tOr ExpArithm
   37          | ExpArithm . tAnd ExpArithm
   38          | ExpArithm . tEq tEq ExpArithm
   39          | ExpArithm . tInf ExpArithm
   40          | ExpArithm . tSup ExpArithm
   41          | ExpArithm . tInf tEq ExpArithm
   42          | ExpArithm . tSup tEq ExpArithm

    tEq     décalage et aller à l'état 62
    tInf    décalage et aller à l'état 63
    tSup    décalage et aller à l'état 64
    tPlus   décalage et aller à l'état 65
    tMoins  décalage et aller à l'état 66
    tStar   décalage et aller à l'état 67
    tDiv    décalage et aller à l'état 68
    tOr     décalage et aller à l'état 69
    tAnd    décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 19 (Param)


État 51

   32 ExpArithm: ExpArithm . tPlus ExpArithm
   33          | ExpArithm . tMoins ExpArithm
   34          | ExpArithm . tStar ExpArithm
   35          | ExpArithm . tDiv ExpArithm
   36          | ExpArithm . tOr ExpArithm
   37          | ExpArithm . tAnd ExpArithm
   38          | ExpArithm . tEq tEq ExpArithm
   39          | ExpArithm . tInf ExpArithm
   40          | ExpArithm . tSup ExpArithm
   41          | ExpArithm . tInf tEq ExpArithm
   42          | ExpArithm . tSup tEq ExpArithm
   48 Affectation: tId tEq ExpArithm . tPvir

    tPvir   décalage et aller à l'état 71
    tEq     décalage et aller à l'état 62
    tInf    décalage et aller à l'état 63
    tSup    décalage et aller à l'état 64
    tPlus   décalage et aller à l'état 65
    tMoins  décalage et aller à l'état 66
    tStar   décalage et aller à l'état 67
    tDiv    décalage et aller à l'état 68
    tOr     décalage et aller à l'état 69
    tAnd    décalage et aller à l'état 70


État 52

   27 If: tIf tPo ExpArithm . tPf $@2 Body
   32 ExpArithm: ExpArithm . tPlus ExpArithm
   33          | ExpArithm . tMoins ExpArithm
   34          | ExpArithm . tStar ExpArithm
   35          | ExpArithm . tDiv ExpArithm
   36          | ExpArithm . tOr ExpArithm
   37          | ExpArithm . tAnd ExpArithm
   38          | ExpArithm . tEq tEq ExpArithm
   39          | ExpArithm . tInf ExpArithm
   40          | ExpArithm . tSup ExpArithm
   41          | ExpArithm . tInf tEq ExpArithm
   42          | ExpArithm . tSup tEq ExpArithm

    tPf     décalage et aller à l'état 72
    tEq     décalage et aller à l'état 62
    tInf    décalage et aller à l'état 63
    tSup    décalage et aller à l'état 64
    tPlus   décalage et aller à l'état 65
    tMoins  décalage et aller à l'état 66
    tStar   décalage et aller à l'état 67
    tDiv    décalage et aller à l'état 68
    tOr     décalage et aller à l'état 69
    tAnd    décalage et aller à l'état 70


État 53

   51 Decl1: tId tEq . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 73


État 54

   53 Decls: Decl1 tVir . Decls

    tId  décalage et aller à l'état 35

    Decl1  aller à l'état 36
    Decls  aller à l'état 74


État 55

   49 Declaration: tInt Decls tPvir .

    $défaut  réduction par utilisation de la règle 49 (Declaration)


État 56

   31 While: tWhile tPo ExpArithm . tPf $@3 Body
   32 ExpArithm: ExpArithm . tPlus ExpArithm
   33          | ExpArithm . tMoins ExpArithm
   34          | ExpArithm . tStar ExpArithm
   35          | ExpArithm . tDiv ExpArithm
   36          | ExpArithm . tOr ExpArithm
   37          | ExpArithm . tAnd ExpArithm
   38          | ExpArithm . tEq tEq ExpArithm
   39          | ExpArithm . tInf ExpArithm
   40          | ExpArithm . tSup ExpArithm
   41          | ExpArithm . tInf tEq ExpArithm
   42          | ExpArithm . tSup tEq ExpArithm

    tPf     décalage et aller à l'état 75
    tEq     décalage et aller à l'état 62
    tInf    décalage et aller à l'état 63
    tSup    décalage et aller à l'état 64
    tPlus   décalage et aller à l'état 65
    tMoins  décalage et aller à l'état 66
    tStar   décalage et aller à l'état 67
    tDiv    décalage et aller à l'état 68
    tOr     décalage et aller à l'état 69
    tAnd    décalage et aller à l'état 70


État 57

   29 Else: tElse Body .

    $défaut  réduction par utilisation de la règle 29 (Else)


État 58

   32 ExpArithm: ExpArithm . tPlus ExpArithm
   33          | ExpArithm . tMoins ExpArithm
   34          | ExpArithm . tStar ExpArithm
   35          | ExpArithm . tDiv ExpArithm
   36          | ExpArithm . tOr ExpArithm
   37          | ExpArithm . tAnd ExpArithm
   38          | ExpArithm . tEq tEq ExpArithm
   39          | ExpArithm . tInf ExpArithm
   40          | ExpArithm . tSup ExpArithm
   41          | ExpArithm . tInf tEq ExpArithm
   42          | ExpArithm . tSup tEq ExpArithm
   44          | tPo ExpArithm . tPf

    tPf     décalage et aller à l'état 76
    tEq     décalage et aller à l'état 62
    tInf    décalage et aller à l'état 63
    tSup    décalage et aller à l'état 64
    tPlus   décalage et aller à l'état 65
    tMoins  décalage et aller à l'état 66
    tStar   décalage et aller à l'état 67
    tDiv    décalage et aller à l'état 68
    tOr     décalage et aller à l'état 69
    tAnd    décalage et aller à l'état 70


État 59

   32 ExpArithm: ExpArithm . tPlus ExpArithm
   33          | ExpArithm . tMoins ExpArithm
   34          | ExpArithm . tStar ExpArithm
   35          | ExpArithm . tDiv ExpArithm
   36          | ExpArithm . tOr ExpArithm
   37          | ExpArithm . tAnd ExpArithm
   38          | ExpArithm . tEq tEq ExpArithm
   39          | ExpArithm . tInf ExpArithm
   40          | ExpArithm . tSup ExpArithm
   41          | ExpArithm . tInf tEq ExpArithm
   42          | ExpArithm . tSup tEq ExpArithm
   43          | tNot ExpArithm .

    $défaut  réduction par utilisation de la règle 43 (ExpArithm)


État 60

   22 Params: Param tVir . ParamsNext

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    Param       aller à l'état 77
    ParamsNext  aller à l'état 78
    ExpArithm   aller à l'état 50


État 61

   18 Invocation: tId tPo Params tPf . tPvir

    tPvir  décalage et aller à l'état 79


État 62

   38 ExpArithm: ExpArithm tEq . tEq ExpArithm

    tEq  décalage et aller à l'état 80


État 63

   39 ExpArithm: ExpArithm tInf . ExpArithm
   41          | ExpArithm tInf . tEq ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tEq   décalage et aller à l'état 81
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 82


État 64

   40 ExpArithm: ExpArithm tSup . ExpArithm
   42          | ExpArithm tSup . tEq ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tEq   décalage et aller à l'état 83
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 84


État 65

   32 ExpArithm: ExpArithm tPlus . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 85


État 66

   33 ExpArithm: ExpArithm tMoins . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 86


État 67

   34 ExpArithm: ExpArithm tStar . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 87


État 68

   35 ExpArithm: ExpArithm tDiv . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 88


État 69

   36 ExpArithm: ExpArithm tOr . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 89


État 70

   37 ExpArithm: ExpArithm tAnd . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 90


État 71

   48 Affectation: tId tEq ExpArithm tPvir .

    $défaut  réduction par utilisation de la règle 48 (Affectation)


État 72

   27 If: tIf tPo ExpArithm tPf . $@2 Body

    $défaut  réduction par utilisation de la règle 26 ($@2)

    $@2  aller à l'état 91


État 73

   32 ExpArithm: ExpArithm . tPlus ExpArithm
   33          | ExpArithm . tMoins ExpArithm
   34          | ExpArithm . tStar ExpArithm
   35          | ExpArithm . tDiv ExpArithm
   36          | ExpArithm . tOr ExpArithm
   37          | ExpArithm . tAnd ExpArithm
   38          | ExpArithm . tEq tEq ExpArithm
   39          | ExpArithm . tInf ExpArithm
   40          | ExpArithm . tSup ExpArithm
   41          | ExpArithm . tInf tEq ExpArithm
   42          | ExpArithm . tSup tEq ExpArithm
   51 Decl1: tId tEq ExpArithm .

    tEq     décalage et aller à l'état 62
    tInf    décalage et aller à l'état 63
    tSup    décalage et aller à l'état 64
    tPlus   décalage et aller à l'état 65
    tMoins  décalage et aller à l'état 66
    tStar   décalage et aller à l'état 67
    tDiv    décalage et aller à l'état 68
    tOr     décalage et aller à l'état 69
    tAnd    décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 51 (Decl1)


État 74

   53 Decls: Decl1 tVir Decls .

    $défaut  réduction par utilisation de la règle 53 (Decls)


État 75

   31 While: tWhile tPo ExpArithm tPf . $@3 Body

    $défaut  réduction par utilisation de la règle 30 ($@3)

    $@3  aller à l'état 92


État 76

   44 ExpArithm: tPo ExpArithm tPf .

    $défaut  réduction par utilisation de la règle 44 (ExpArithm)


État 77

   23 ParamsNext: Param .
   24           | Param . tVir ParamsNext

    tVir  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 23 (ParamsNext)


État 78

   22 Params: Param tVir ParamsNext .

    $défaut  réduction par utilisation de la règle 22 (Params)


État 79

   18 Invocation: tId tPo Params tPf tPvir .

    $défaut  réduction par utilisation de la règle 18 (Invocation)


État 80

   38 ExpArithm: ExpArithm tEq tEq . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 94


État 81

   41 ExpArithm: ExpArithm tInf tEq . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46

    Invocation  aller à l'état 47
    ExpArithm   aller à l'état 95


État 82

   32 ExpArithm: ExpArithm . tPlus ExpArithm
   33          | ExpArithm . tMoins ExpArithm
   34          | ExpArithm . tStar ExpArithm
   35          | ExpArithm . tDiv ExpArithm
   36          | ExpArithm . tOr ExpArithm
   37          | ExpArithm . tAnd ExpArithm
   38          | ExpArithm . tEq tEq ExpArithm
   39          | ExpArithm . tInf ExpArithm
   39          | ExpArithm tInf ExpArithm .
   40          | ExpArithm . tSup ExpArithm
   41          | ExpArithm . tInf tEq ExpArithm
   42          | ExpArithm . tSup tEq ExpArithm

    tInf    décalage et aller à l'état 63
    tSup    décalage et aller à l'état 64
    tPlus   décalage et aller à l'état 65
    tMoins  décalage et aller à l'état 66
    tStar   décalage et aller à l'état 67
    tDiv    décalage et aller à l'état 68
    tOr     décalage et aller à l'état 69
    tAnd    décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 39 (ExpArithm)


État 83

   42 ExpArithm: ExpArithm tSup tEq . ExpArithm

    tPo   décalage et aller à l'état 43
    tId   décalage et aller à l'état 44
    tNb   décalage et aller à l'état 45
    tNot  décalage et aller à l'état 46
